[package]
name = "rust_mango_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = {version = "0.5.3", features = ["unstable_grab"]}
serde = {version = "1.0.183", features = ["derive"]}
windows = {version =  "0.48.0", features = ["Devices_Input"]}
